--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,9 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "./node_modules/gsap/dist/gsap.min.js",
+              "./node_modules/gsap/dist/ScrollTrigger.min.js"
             ]
           }
         }
