--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.0",
     "gsap": "^3.12.1",
     "rxjs": "~7.8.0",
+    "scrolltrigger-classes": "^0.3.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
