--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@types/gsap": "^3.0.0",
     "bootstrap": "^5.3.0",
+    "d3": "^7.8.5",
     "gsap": "^3.12.1",
     "rxjs": "~7.8.0",
     "scrolltrigger-classes": "^0.3.6",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^15.2.7",
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/d3": "^7.4.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
