--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@types/gsap": "^3.0.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
     "d3": "^7.8.5",
     "gsap": "^3.12.2",
